@@ -34,6 +34,11 @@ Report bugs to <freeipmi\-devel@gnu.org>.
 Copyright \(co 2003-2005 FreeIPMI Core Team
 This program is free software; you may redistribute it under the terms of
 the GNU General Public License.  This program has absolutely no warranty.
+.SH WORKAROUND
+On the IBM e325, the BMC firmware is very buggy and prohibits most
+in-band communication in FreeIPMI.  We recommend using the IBM
+provided 'lancfg' tool to initially configure the BMC, then use
+out-of-band access for further communication.
 .SH "SEE ALSO"
 The full documentation for
 .B FreeIPMI
